--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     h1 Books
     p
-        a(class="button" href="#") Create New Book
+        a(class="button" href="/books/new") Create New Book
     table
         thead
             tr
@@ -16,7 +16,7 @@ block content
                 book
                 tr
                     td
-                        a(href="#") #{book.title}
+                        a(href="/books/" + book.id) #{book.title}
                     td= book.author
                     td= book.genre
                     td= book.year
