--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -1,6 +1,7 @@
 extends layout
 block content
     h1 New Book
+    include errors
     form(method="post" action="/books/new")
         p
             label(for="title") Title
